--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2418,7 +2418,8 @@ body {
     }
 }
 .hero_section,
-.contact_section {
+.contact_section,
+.services_section {
     .section_content {
         min-height: calc(100vh - var(--NVH));
         min-height: var(--FS_NVH);
