--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,12 +18,6 @@
 }
 @font-face {
     font-family: "Titillium Web";
-    src: url("../font/TitilliumWeb-Bold.ttf");
-    font-weight: 700;
-    font-style: normal;
-}
-@font-face {
-    font-family: "Titillium Web";
     src: url("../font/TitilliumWeb-ExtraLightItalic.ttf");
     font-weight: 200;
     font-style: italic;
@@ -159,7 +153,6 @@ html {
     --FW_L: 200;
     --FW_N: 400;
     --FW_B: 600;
-    --FW_BB: 700;
     --fontSizeSClamp: clamp(1.2rem, calc(1.2rem + 0.5vw), 1.8rem);
     --fontSizeMClamp: clamp(2rem, calc(1.5rem + 0.5vw), 2.2rem);
     --fontSizeXClamp: clamp(2.5rem, calc(1.5rem + 1.5vw), 4rem);
@@ -1043,7 +1036,6 @@ body {
 .adobe_icon {
     transform: scale(0.8);
 }
-//^^DESIGN ICONS COLORS-- OVER
 //^^TECH ICONS COLORS--START
 .html_icon_svg {
     .cls-1 {
@@ -1080,7 +1072,7 @@ body {
     }
 }
 .js_icon_svg {
-    transform: scale(0.75);
+    scale: 0.75;
     .cls-1 {
         fill: #f7df1e;
     }
@@ -1124,8 +1116,17 @@ body {
         stroke-width: 0px;
     }
 }
+.vue_icon_svg {
+    scale: 0.8;
+    .cls-1 {
+        fill: #35495e;
+    }
+    .cls-2 {
+        fill: #41b883;
+    }
+}
 .python_icon_svg {
-    scale: 0.75;
+    scale: 0.8;
     .cls-1 {
         fill: #366a96;
     }
@@ -2430,6 +2431,7 @@ body {
         @include flexDirection(column, flex-start, flex-end);
         .icons_container {
             @include flexDirection(row, flex-end, center);
+            margin-top: 0.5rem;
             gap: 0;
         }
     }
