--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2260,7 +2260,7 @@ body {
     height: 100%;
     width: 100%;
     max-width: 100%;
-    background-size: 100% auto !important;
+    background-size: cover !important;
     background-position: center !important;
     z-index: -1;
 }
