update black jack img

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -240,6 +240,8 @@ html {
     H1,
     H2 {
         text-align: center;
+
+        font-weight: var(--FW_B);
     }
     H1 {
         color: var(--FC);
