--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1347,7 +1347,7 @@ html {
     margin-top: 4rem;
     h3 {
         /*  font-family: var(--titanimFont); */
-        font-weight: var(--FW-N);
+        font-weight: var(--FW_N);
     }
     .arrow_down_svg {
         margin-top: 1rem;
@@ -1741,6 +1741,7 @@ html {
     color: var(--TC_C) !important;
     .label_btn {
         color: var(--TC_C) !important;
+        font-weight: var(--FW_B);
         animation: bounce 2s ease-in-out infinite;
     }
     .icon_svg {
@@ -1783,7 +1784,7 @@ html {
             justify-content: center;
             align-items: center;
             text-align: center;
-            font-weight: var(--FW-N);
+            font-weight: var(--FW_N);
             font-size: 1.5rem;
         }
     }
