remove target black in btns with links, center service card content

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1541,7 +1541,7 @@ html {
     
 } */
 .service_card {
-    @include flexDirection(column, flex-start, flex-start);
+    @include flexDirection(column, center, center);
     .info_card {
         width: 100%;
         max-width: 400px;
