--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1465,8 +1465,8 @@ html body {
 .service_card {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 .service_card .info_card {
   width: 100%;
